--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
     "redux": "3.6.0",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "2.1.0",
+    "express": "4"
   },
   "devDependencies": {
     "autoprefixer": "7.1.2",
