--- a/package.json
+++ b/package.json
@@ -32,15 +32,17 @@
   "author": "Ramiro Ramirez",
   "license": "GPL-3.0",
   "dependencies": {
+    "compression": "1.7.0",
+    "express": "4.15.3",
     "object-assign": "4.1.0",
+    "open": "0.0.5",
     "react": "15.5.4",
     "react-dom": "15.5.4",
     "react-redux": "5.0.5",
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
     "redux": "3.6.0",
-    "redux-thunk": "2.1.0",
-    "express": "4"
+    "redux-thunk": "2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "7.1.2",
