--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
     "replace": "0.3.0",
     "rimraf": "2.6.1",
     "sass-loader": "6.0.6",
+    "semantic-ui-css": "2.2.11",
+    "semantic-ui-react": "0.71.1",
     "style-loader": "0.18.2",
     "url-loader": "0.5.9",
     "webpack": "3.1.0",
