remove Object-assgin library

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,8 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 
-#dist folder
-
+#dist compiled files for production folder
+dist
 # IDEA/Webstorm project files
 .idea
 *.iml
